# shipit_agent

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ANNOUNCE.md  ANNOUNCEMENT_1.0.4.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_1.0.6.md  SECURITY.md  TOOLS.md  docs.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  gitleaks.yml  release.yml  test.yml
.shipit_notebook_workspace/: memory.json
.shipit_notebook_workspace/sessions/: demo-session.json  notebook-chat.json
.shipit_notebook_workspace/traces/: demo-trace.json  notebook-chat-trace.json
.shipit_notebooks/multi_tools/: memory.json
.shipit_notebooks/sessions_demo/: demo-chat.json
.shipit_notebooks/streaming_demo/: memory.json
docs/: changelog.md  faq.md  glossary.md  index.md  security.md
docs/agent/: examples.md  index.md  memory.md  sessions.md  streaming.md  with-rag.md  with-tools.md
docs/deep-agents/: adaptive-agent.md  benchmarking.md  channels.md  deep-agent.md  goal-agent.md  index.md  persistent-agent.md  reflective-agent.md  supervisor.md
docs/getting-started/: environment.md  install.md  quickstart.md
docs/guides/: advanced-memory.md  async-runtime.md  context-management.md  custom-tools.md  deep-agents.md  error-recovery.md  hooks.md  mcp.md  parallel-execution.md  parsers-and-structured-output.md  pipelines-and-teams.md  prebuilt-tools.md  reasoning.md  replanning.md  sessions.md  skills.md  streaming.md  structured-output.md  tool-search.md
docs/javascripts/: toc-toggle.js
docs/overrides/: main.html
docs/rag/: adapters.md  api.md  files-and-chunks.md  index.md  standalone.md  with-agent.md  with-deep-agents.md
docs/reference/: adapters.md  architecture.md  deep-agents-api.md  events.md  parameters.md  tools.md
docs/stylesheets/: extra.css
docs/tools/: bash.md  code-and-files.md  connectors.md  core-tools.md  edit-file.md  glob-files.md  grep-files.md  index.md  read-file.md  reasoning-helpers.md  write-file.md
examples/: 01_hello_agent.py  02_streaming_with_reasoning.py  03_provider_swap.py  04_research_agent.py  05_custom_tool.py  06_chat_session.py  07_tool_search.py  08_structured_output.py  09_pipeline.py  10_agent_team.py  11_deep_agents.py  12_advanced_memory.py  README.md  __init__.py  custom_function_tool_template.py  custom_workspace_tool_template.py  reasoning_agent_template.py  run_multi_tool_agent.py
notebooks/: 01_agent_without_tools.ipynb  02_agent_multi_tools.ipynb  03_agent_sessions_and_history.ipynb  04_agent_streaming_packets.ipynb  05_agent_with_mcp.ipynb  06_agent_connectors_gmail_and_others.ipynb  07_agent_with_human_review.ipynb  08_agent_with_ask_user.ipynb  09_agent_reasoning_and_thinking.ipynb  10_parsers_and_structured_output.ipynb  11_pipeline_composition.ipynb  12_agent_teams.ipynb  13_advanced_memory.ipynb  14_deep_agents.ipynb  15_agent_benchmark.ipynb  16_deep_agents_streaming.ipynb  17_deep_agents_real_world.ipynb  18_deep_agents_with_memory.ipynb  19_supervisor_with_tools.ipynb  20_goal_agent_with_tools.ipynb  21_reflective_agent_web_research.ipynb  22_rag_basics.ipynb  23_rag_with_agent.ipynb  24_rag_with_deep_agents.ipynb  25_deep_agent_chat.ipynb  26_agent_memory.ipynb  27_skills_catalog_and_usage.ipynb  28_create_and_use_custom_skills.ipynb  29_deep_agent_with_skills.ipynb  30_build_full_project_with_skills.ipynb  31_cost_tracker.ipynb  32_prebuilt_agents.ipynb  33_ship_crew_orchestration.ipynb  34_notifications.ipynb  35_cost_tracking_and_budgets.ipynb  36_skill_power_tools_and_metadata.ipynb  37_autopilot_quickstart.ipynb  38_autopilot_live_streaming.ipynb  39_persistence_and_scheduler_daemon.ipynb  40_specialists_developer_debugger_researcher.ipynb  (+9 more)
notebooks/_dashboard_workspace/: finance-one-pager-fy26.html  life_vision.html
scripts/: bump_version.py  extract_changelog_section.py  smoke_bedrock_e2e.py
shipit_agent/: __init__.py  agent.py  askuser_channel.py  async_runtime.py  builtins.py  chat_cli.py  chat_session.py  cli.py  cli_autopilot.py  construction.py  context_tracker.py  doctor.py  exceptions.py  hooks.py  live_renderer.py  mcp.py  models.py  packets.py  policies.py  profiles.py  reasoning.py  registry.py  runtime.py  schedule.py  scheduler_daemon.py  session_manager.py  structured.py  templates.py  tool_runner.py  tracing.py
shipit_agent/agents/: __init__.py  _specialists_patch.py  agents.json  definition.py  registry.py
shipit_agent/autopilot/: __init__.py  artifacts.py  budget.py  checkpoint.py  core.py  critic.py  events.py  fanout.py  result.py  streaming.py
shipit_agent/costs/: __init__.py  budget.py  pricing.py  tracker.py
shipit_agent/deep/: __init__.py  adaptive_agent.py  benchmark.py  channel.py  goal_agent.py  persistent_agent.py  reflective_agent.py  supervisor.py
shipit_agent/integrations/: __init__.py  (+2 more)
site/: 404.html  index.html  sitemap.xml
tests/: test_askuser_async.py  test_autopilot.py  test_autopilot_artifacts.py  test_autopilot_bedrock_e2e.py  test_autopilot_critic.py  test_autopilot_fanout.py  test_autopilot_hardening.py  test_autopilot_long_task.py  test_chat_cli.py  test_chat_session_and_packets.py  test_code_execution_sandbox.py  test_code_execution_tool.py  test_computer_use_vision.py  test_connector_tools.py  test_construction_and_runner.py  test_context_tracker.py  test_core_agent.py  test_cost_router.py  test_dashboard_render.py  test_deep_agent_delegation.py  test_deep_agent_factory.py  test_deep_agents.py  test_deep_agents_streaming.py  test_doctor.py  test_examples_and_env.py  test_interactive_tools.py  test_llm_factory.py  test_mcp_and_profiles.py  test_new_tools.py  test_notebook_assets.py  test_notifications_and_costs.py  test_oauth_and_tracing.py  test_pipeline_and_team_streaming.py  test_power_features.py  test_prebuilt_agents.py  test_productivity_tools.py  test_reasoning_runtime.py  test_release_docs_consistency.py  test_runtime_policies.py  test_schedule_runner.py  (+11 more)
(+230 files in other folders)
