[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipit-agent"
version = "1.0.3"
description = "A clean, powerful agent runtime with tools, MCP support, profiles, and streaming events."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rahul Raj" }
]
dependencies = [
  "pydantic>=2.0.0",
]
keywords = ["agent", "llm", "mcp", "tools", "automation", "ai"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.0",
  "jupyter>=1.0.0",
  "nbconvert>=7.16.0",
]

# --- LLM providers -----------------------------------------------------------
openai = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.34.0"]
litellm = ["litellm>=1.42.0"]
bedrock = ["boto3>=1.34.0"]
google = ["google-generativeai>=0.8.0"]
groq = ["groq>=0.11.0"]
together = ["together>=1.3.0"]
ollama = ["ollama>=0.3.0"]

# --- Tools / browser ---------------------------------------------------------
playwright = ["playwright>=1.45.0"]

# --- Super RAG ---------------------------------------------------------------
# Embedders
rag-openai = ["openai>=1.30.0"]
rag-cohere = ["cohere>=5.0.0"]
rag-sentence-transformers = ["sentence-transformers>=2.7.0"]

# Vector store backends
rag-chroma = ["chromadb>=0.5.0"]
rag-qdrant = ["qdrant-client>=1.10.0"]
rag-pgvector = [
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.3.0",
]
# DRK_CACHE adapter — reads existing pgvector indexes via psycopg2
rag-drk-cache = [
  "psycopg2-binary>=2.9.9",
]

# File extractors
rag-pdf = ["pypdf>=4.0.0"]
rag-docx = ["python-docx>=1.1.0"]

# Reranker backends
rag-rerank-cohere = ["cohere>=5.0.0"]
rag-rerank-cross-encoder = ["sentence-transformers>=2.7.0"]

# All Super RAG extras in one shot
rag = [
  "openai>=1.30.0",
  "cohere>=5.0.0",
  "sentence-transformers>=2.7.0",
  "chromadb>=0.5.0",
  "qdrant-client>=1.10.0",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.3.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "rank-bm25>=0.2.2",
]

# --- Everything --------------------------------------------------------------
all = [
  "pydantic>=2.0.0",
  # LLM providers
  "openai>=1.30.0",
  "anthropic>=0.34.0",
  "litellm>=1.42.0",
  "boto3>=1.34.0",
  "google-generativeai>=0.8.0",
  "groq>=0.11.0",
  "together>=1.3.0",
  "ollama>=0.3.0",
  # Tools
  "playwright>=1.45.0",
  # Super RAG
  "cohere>=5.0.0",
  "sentence-transformers>=2.7.0",
  "chromadb>=0.5.0",
  "qdrant-client>=1.10.0",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.3.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "rank-bm25>=0.2.2",
]

[project.scripts]
shipit = "shipit_agent.cli:main"
shipit-chat = "shipit_agent.chat_cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["shipit_agent*"]

[project.urls]
Homepage = "https://github.com/shipiit/shipit_agent"
Repository = "https://github.com/shipiit/shipit_agent"
Issues = "https://github.com/shipiit/shipit_agent/issues"
Documentation = "https://shipiit.github.io/shipit_agent/"
Changelog = "https://github.com/shipiit/shipit_agent/releases"
